--- a/src/styles/SocialsButtons.css
+++ b/src/styles/SocialsButtons.css
@@ -1,6 +1,5 @@
 #socials-buttons{
     border-radius: 10% !important;
-    margin-left: 2vw !important;
     height: fit-content !important;
     width: fit-content !important;
     position: fixed !important;
